--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,7 +203,7 @@ a {
   margin: 0px auto;
   max-width: 200px;
   transform: rotate(6deg);
-  color: var(--clr-accent-two);
+  color: var(--clr-accent-three);
 }
 
 .hero--devider--image {
@@ -223,7 +223,7 @@ a {
 }
 
 .note--icon path {
-  fill: var(--clr-accent-two);
+  fill: var(--clr-accent-three);
 }
 
 .demo {}
