--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ a {
 }
 
 .mb--visual {
-  display: inherit !important;
+  display: block !important;
 }
 
 .pill {
@@ -206,8 +206,18 @@ a {
   color: var(--clr-accent-three);
 }
 
+.hero--devider {
+  margin: 0;
+  padding: 0;
+  font-size: 0;
+  line-height: 0;
+  overflow: hidden;
+
+}
+
 .hero--devider--image {
   width: 100%;
+  height: auto;
 }
 
 .note--copy {
