--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -364,9 +364,37 @@ a {
   padding-bottom: 4rem;
 }
 
-.form--email {}
+.form--email {
+  border-radius: 2rem;
+  font-size: 1rem;
+  font-weight: bold;
+  line-height: 1.5rem;
+  padding: .75rem 1.5rem;
+  border: 1px solid var(--clr-base-ultralight);
+  min-width: 335px;
+  margin-bottom: 1rem;
+}
 
-.form--submit {}
+.form--email:focus,
+.form--email:active,
+.form--submit:focus,
+.form--submit:active {
+  outline: none;
+  border-color: var(--clr-base-light);
+  box-shadow: 0 0 1pt 1pt rgba(0, 0, 0, 0.25);
+}
+
+.form--submit {
+  min-width: 335px;
+  border-radius: 2rem;
+  font-size: 1rem;
+  font-weight: bold;
+  line-height: 1.5rem;
+  padding: .75rem 1.5rem;
+  border: 1px solid var(--clr-base);
+  background: var(--clr-base);
+  color: var(--clr-accent-one);
+}
 
 .form--copy {
   font-size: 0.75rem;
@@ -410,6 +438,10 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
+  }
+
+  .hero--note {
+    transform: translate(-125%, -40%) rotate(16deg);
   }
 
   .hero--title {
@@ -481,6 +513,11 @@ a {
     padding: 0;
     margin: 0;
     line-height: 1;
+  }
+
+  .form--submit {
+    margin-left: 1rem;
+    min-width: auto;
   }
 
   .footer {
