--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -127,9 +127,11 @@ a {
   padding: 1rem;
 }
 
-.brand {}
+.brand {
+}
 
-.brand--link {}
+.brand--link {
+}
 
 .brand--logo {
   height: 3rem;
@@ -141,7 +143,8 @@ a {
   list-style-type: none;
 }
 
-.menu--item {}
+.menu--item {
+}
 
 .menu--item--link {
   display: inline-block;
@@ -190,7 +193,8 @@ a {
   letter-spacing: -0.05rem;
 }
 
-.hero--link {}
+.hero--link {
+}
 
 .hero--link__cta {
   font-size: 1.25rem;
@@ -229,7 +233,6 @@ a {
   font-size: 0;
   line-height: 0;
   overflow: hidden;
-
 }
 
 .hero--devider--image {
@@ -257,7 +260,8 @@ a {
   fill: var(--clr-accent-three);
 }
 
-.demo {}
+.demo {
+}
 
 .demo--title {
   margin: 0px auto;
@@ -271,7 +275,8 @@ a {
   padding: 0rem 1.25rem;
 }
 
-.features {}
+.features {
+}
 
 .features--title {
   text-align: center;
@@ -302,7 +307,8 @@ a {
   padding: 0rem 1.25rem;
 }
 
-.feature--copy {}
+.feature--copy {
+}
 
 .feature--footer {
   padding: 0rem 1.25rem 2.25rem 1.25rem;
@@ -313,7 +319,8 @@ a {
   color: var(--clr-base-light);
 }
 
-.feature--link__inline {}
+.feature--link__inline {
+}
 
 .manifesto--visual {
   width: 4rem;
@@ -351,7 +358,8 @@ a {
   letter-spacing: -0.05rem;
 }
 
-.subscribe {}
+.subscribe {
+}
 
 .subscribe--title {
   font-size: 1rem;
@@ -396,7 +404,7 @@ a {
   font-size: 1rem;
   font-weight: bold;
   line-height: 1.5rem;
-  padding: .75rem 1.5rem;
+  padding: 0.75rem 1.5rem;
   border: 1px solid var(--clr-base-ultralight);
   min-width: 335px;
   margin-bottom: 1rem;
@@ -418,7 +426,7 @@ a {
   font-size: 1rem;
   font-weight: bold;
   line-height: 1.5rem;
-  padding: .75rem 1.5rem;
+  padding: 0.75rem 1.5rem;
   border: 1px solid var(--clr-base);
   background: var(--clr-base);
   color: var(--clr-accent-one);
@@ -441,9 +449,7 @@ a {
   color: var(--clr-accent-one);
 }
 
-
 @media (min-width: 940px) {
-
   .mb--hidden {
     display: inherit !important;
   }
@@ -462,6 +468,7 @@ a {
     -webkit-box-pack: justify;
     -ms-flex-pack: justify;
     justify-content: space-between;
+    padding: 1rem 4rem;
   }
 
   .menu {
@@ -470,7 +477,7 @@ a {
     display: flex;
   }
 
-  .hero {
+  .hero-content {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -533,7 +540,6 @@ a {
   }
 
   .feature--link {
-
     font-size: 1.25rem;
   }
 
@@ -588,4 +594,5 @@ a {
   }
 }
 
-@media (min-width: 1280px) {}
+@media (min-width: 1280px) {
+}
